fixed aligne mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -124,6 +124,7 @@
 
   #typed-container{
     position: relative;
+    left: 0;
   }
 /*  .dual-intro{
     position: relative;
@@ -156,7 +157,6 @@
   .feature-visual{
     margin: 0px 0px 30px 0px;
     width: 100%;
-    height: 300px;
     position:relative;
     display:inline-block;
     overflow:hidden;
